03-k8s-manifests/base/apps/02-backend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-api
  namespace: prod-ns
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/path: "/metrics"
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 101
        runAsGroup: 101
        fsGroup: 101
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: backend-ksa
      nodeSelector:
        finops.tier: backend
      containers:
      - name: api
        image: us-central1-docker.pkg.dev/second-project-497312/app-images/backend:latest
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop: ["ALL"]
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "250m"
            memory: "256Mi"
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 20
          periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: prod-ns
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  selector:
    app: backend
  ports:
  - port: 8080
    targetPort: 8080
